--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,14 @@
     margin-top: -1em;
   }
 }
+
+// copied from bulma's in-page documentation example on modal
+// here https://bulma.io/css/bulma-docs.min.css?v=201901250817
+.box {
+  background-color: #fff;
+  border-radius: 6px;
+  box-shadow: 0 2px 3px rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.1);
+  color: #4a4a4a;
+  display: block;
+  padding: 1.25rem;
+}
